// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RDSDatabaseRunningScheduleStack custom start/stop schedule Should match snapshot 1`] = `
{
  "Mappings": {
    "ParamsandsecretslayerMap": {
      "af-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:af-south-1:317013901791:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-east-1:768336418462:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-northeast-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-northeast-2": {
        "1x0x103xarm64": "arn:aws:lambda:ap-northeast-2:738900069198:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-south-1:176022468876:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-1:044395824272:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-2": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-2:665172237481:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-3": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-3:490737872127:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ca-central-1": {
        "1x0x103xarm64": "arn:aws:lambda:ca-central-1:200266452380:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-central-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-central-1:187925254637:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-north-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-north-1:427196147048:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-south-1:325218067255:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-west-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-1:015030872274:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-west-2": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-2:133256977650:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-west-3": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-3:780235371811:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "me-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:me-south-1:832021897121:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "sa-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:sa-east-1:933737806257:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "us-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:us-east-1:177933569100:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "us-east-2": {
        "1x0x103xarm64": "arn:aws:lambda:us-east-2:590474943231:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "us-west-1": {
        "1x0x103xarm64": "arn:aws:lambda:us-west-1:997803712105:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "us-west-2": {
        "1x0x103xarm64": "arn:aws:lambda:us-west-2:345057560386:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3": {
      "DependsOn": [
        "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDefaultPolicy5EC9C3E8",
        "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "7cd09150c04c60268a9d0553ddb6d1a78d7e4bc8b6b6f1ca6f4cdaca356bd9a7.zip",
        },
        "Description": "A function to run the scheduled RDS Database or Cluster.",
        "DurableConfig": {
          "ExecutionTimeout": 7200,
          "RetentionPeriodInDays": 1,
        },
        "Environment": {
          "Variables": {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "PARAMETERS_SECRETS_EXTENSION_CACHE_ENABLED": "true",
            "PARAMETERS_SECRETS_EXTENSION_CACHE_SIZE": "500",
            "PARAMETERS_SECRETS_EXTENSION_HTTP_PORT": "2773",
            "PARAMETERS_SECRETS_EXTENSION_LOG_LEVEL": "info",
            "PARAMETERS_SECRETS_EXTENSION_MAX_CONNECTIONS": "3",
            "SECRETS_MANAGER_TIMEOUT_MILLIS": "0",
            "SECRETS_MANAGER_TTL": "300",
            "SLACK_SECRET_NAME": "example/slack/webhook",
            "SSM_PARAMETER_STORE_TIMEOUT_MILLIS": "0",
            "SSM_PARAMETER_STORE_TTL": "300",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Fn::FindInMap": [
              "ParamsandsecretslayerMap",
              {
                "Ref": "AWS::Region",
              },
              "1x0x103xarm64",
            ],
          },
        ],
        "LoggingConfig": {
          "ApplicationLogLevel": "INFO",
          "LogFormat": "JSON",
          "LogGroup": {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionLogGroup1F20E46F",
          },
          "SystemLogLevel": "INFO",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE": {
      "Properties": {
        "FunctionName": {
          "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3",
        },
        "FunctionVersion": {
          "Fn::GetAtt": [
            "RDSDatabaseRunningSchedulerRunningScheduleFunctionCurrentVersion1310F961a30996db3f0547eaaa13637c7ae184c6",
            "Version",
          ],
        },
        "Name": "live",
      },
      "Type": "AWS::Lambda::Alias",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionCurrentVersion1310F961a30996db3f0547eaaa13637c7ae184c6": {
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "FunctionName": {
          "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3",
        },
      },
      "Type": "AWS::Lambda::Version",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionEventInvokeConfig6F7C289F": {
      "Properties": {
        "FunctionName": {
          "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3",
        },
        "MaximumRetryAttempts": 2,
        "Qualifier": "$LATEST",
      },
      "Type": "AWS::Lambda::EventInvokeConfig",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionLogGroup1F20E46F": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "A role to control the RDS Database or Cluster.",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicDurableExecutionRolePolicy",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDefaultPolicy5EC9C3E8": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "tag:GetResources",
              "Effect": "Allow",
              "Resource": "*",
              "Sid": "GetResources",
            },
            {
              "Action": [
                "rds:DescribeDBInstances",
                "rds:DescribeDBClusters",
                "rds:StartDBInstance",
                "rds:StartDBCluster",
                "rds:StopDBInstance",
                "rds:StopDBCluster",
              ],
              "Effect": "Allow",
              "Resource": "*",
              "Sid": "RdsRunningControl",
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:example/slack/webhook-??????",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDefaultPolicy5EC9C3E8",
        "Roles": [
          {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RDSDatabaseRunningSchedulerRunningStartScheduleB533179F": {
      "Properties": {
        "Description": "running start schedule",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "ScheduleExpression": "cron(55 8 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "Asia/Tokyo",
        "State": "ENABLED",
        "Target": {
          "Arn": {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE",
          },
          "Input": "{"Params":{"TagKey":"WorkHoursRunning","TagValues":["YES"],"Mode":"Start"}}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 86400,
            "MaximumRetryAttempts": 185,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "SchedulerRoleForTarget52e03eB10A98F4",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RDSDatabaseRunningSchedulerRunningStopScheduleC0B44E8E": {
      "Properties": {
        "Description": "running stop schedule",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "ScheduleExpression": "cron(5 19 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "Asia/Tokyo",
        "State": "ENABLED",
        "Target": {
          "Arn": {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE",
          },
          "Input": "{"Params":{"TagKey":"WorkHoursRunning","TagValues":["YES"],"Mode":"Stop"}}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 86400,
            "MaximumRetryAttempts": 185,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "SchedulerRoleForTarget52e03eB10A98F4",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "SchedulerRoleForTarget52e03eB10A98F4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":scheduler:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":schedule-group/default",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "SchedulerRoleForTarget52e03eDefaultPolicyBA384A27": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SchedulerRoleForTarget52e03eDefaultPolicyBA384A27",
        "Roles": [
          {
            "Ref": "SchedulerRoleForTarget52e03eB10A98F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`RDSDatabaseRunningScheduleStack default schedule Should match snapshot 1`] = `
{
  "Mappings": {
    "ParamsandsecretslayerMap": {
      "af-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:af-south-1:317013901791:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-east-1:768336418462:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-northeast-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-northeast-2": {
        "1x0x103xarm64": "arn:aws:lambda:ap-northeast-2:738900069198:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-south-1:176022468876:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-1:044395824272:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-2": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-2:665172237481:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-3": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-3:490737872127:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ca-central-1": {
        "1x0x103xarm64": "arn:aws:lambda:ca-central-1:200266452380:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-central-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-central-1:187925254637:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-north-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-north-1:427196147048:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-south-1:325218067255:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-west-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-1:015030872274:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-west-2": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-2:133256977650:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-west-3": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-3:780235371811:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "me-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:me-south-1:832021897121:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "sa-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:sa-east-1:933737806257:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "us-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:us-east-1:177933569100:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "us-east-2": {
        "1x0x103xarm64": "arn:aws:lambda:us-east-2:590474943231:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "us-west-1": {
        "1x0x103xarm64": "arn:aws:lambda:us-west-1:997803712105:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "us-west-2": {
        "1x0x103xarm64": "arn:aws:lambda:us-west-2:345057560386:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3": {
      "DependsOn": [
        "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDefaultPolicy5EC9C3E8",
        "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "7cd09150c04c60268a9d0553ddb6d1a78d7e4bc8b6b6f1ca6f4cdaca356bd9a7.zip",
        },
        "Description": "A function to run the scheduled RDS Database or Cluster.",
        "DurableConfig": {
          "ExecutionTimeout": 7200,
          "RetentionPeriodInDays": 1,
        },
        "Environment": {
          "Variables": {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "PARAMETERS_SECRETS_EXTENSION_CACHE_ENABLED": "true",
            "PARAMETERS_SECRETS_EXTENSION_CACHE_SIZE": "500",
            "PARAMETERS_SECRETS_EXTENSION_HTTP_PORT": "2773",
            "PARAMETERS_SECRETS_EXTENSION_LOG_LEVEL": "info",
            "PARAMETERS_SECRETS_EXTENSION_MAX_CONNECTIONS": "3",
            "SECRETS_MANAGER_TIMEOUT_MILLIS": "0",
            "SECRETS_MANAGER_TTL": "300",
            "SLACK_SECRET_NAME": "example/slack/webhook",
            "SSM_PARAMETER_STORE_TIMEOUT_MILLIS": "0",
            "SSM_PARAMETER_STORE_TTL": "300",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Fn::FindInMap": [
              "ParamsandsecretslayerMap",
              {
                "Ref": "AWS::Region",
              },
              "1x0x103xarm64",
            ],
          },
        ],
        "LoggingConfig": {
          "ApplicationLogLevel": "INFO",
          "LogFormat": "JSON",
          "LogGroup": {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionLogGroup1F20E46F",
          },
          "SystemLogLevel": "INFO",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE": {
      "Properties": {
        "FunctionName": {
          "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3",
        },
        "FunctionVersion": {
          "Fn::GetAtt": [
            "RDSDatabaseRunningSchedulerRunningScheduleFunctionCurrentVersion1310F961a30996db3f0547eaaa13637c7ae184c6",
            "Version",
          ],
        },
        "Name": "live",
      },
      "Type": "AWS::Lambda::Alias",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionCurrentVersion1310F961a30996db3f0547eaaa13637c7ae184c6": {
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "FunctionName": {
          "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3",
        },
      },
      "Type": "AWS::Lambda::Version",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionEventInvokeConfig6F7C289F": {
      "Properties": {
        "FunctionName": {
          "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3",
        },
        "MaximumRetryAttempts": 2,
        "Qualifier": "$LATEST",
      },
      "Type": "AWS::Lambda::EventInvokeConfig",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionLogGroup1F20E46F": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "A role to control the RDS Database or Cluster.",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicDurableExecutionRolePolicy",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDefaultPolicy5EC9C3E8": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "tag:GetResources",
              "Effect": "Allow",
              "Resource": "*",
              "Sid": "GetResources",
            },
            {
              "Action": [
                "rds:DescribeDBInstances",
                "rds:DescribeDBClusters",
                "rds:StartDBInstance",
                "rds:StartDBCluster",
                "rds:StopDBInstance",
                "rds:StopDBCluster",
              ],
              "Effect": "Allow",
              "Resource": "*",
              "Sid": "RdsRunningControl",
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:example/slack/webhook-??????",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDefaultPolicy5EC9C3E8",
        "Roles": [
          {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RDSDatabaseRunningSchedulerRunningStartScheduleB533179F": {
      "Properties": {
        "Description": "running start schedule",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "ScheduleExpression": "cron(50 7 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "Etc/UTC",
        "State": "ENABLED",
        "Target": {
          "Arn": {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE",
          },
          "Input": "{"Params":{"TagKey":"WorkHoursRunning","TagValues":["YES"],"Mode":"Start"}}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 86400,
            "MaximumRetryAttempts": 185,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "SchedulerRoleForTarget52e03eB10A98F4",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RDSDatabaseRunningSchedulerRunningStopScheduleC0B44E8E": {
      "Properties": {
        "Description": "running stop schedule",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "ScheduleExpression": "cron(5 19 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "Etc/UTC",
        "State": "ENABLED",
        "Target": {
          "Arn": {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE",
          },
          "Input": "{"Params":{"TagKey":"WorkHoursRunning","TagValues":["YES"],"Mode":"Stop"}}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 86400,
            "MaximumRetryAttempts": 185,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "SchedulerRoleForTarget52e03eB10A98F4",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "SchedulerRoleForTarget52e03eB10A98F4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":scheduler:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":schedule-group/default",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "SchedulerRoleForTarget52e03eDefaultPolicyBA384A27": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SchedulerRoleForTarget52e03eDefaultPolicyBA384A27",
        "Roles": [
          {
            "Ref": "SchedulerRoleForTarget52e03eB10A98F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`RDSDatabaseRunningScheduleStack disabled scheduling Should match snapshot 1`] = `
{
  "Mappings": {
    "ParamsandsecretslayerMap": {
      "af-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:af-south-1:317013901791:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-east-1:768336418462:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-northeast-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-northeast-1:133490724326:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-northeast-2": {
        "1x0x103xarm64": "arn:aws:lambda:ap-northeast-2:738900069198:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ap-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-south-1:176022468876:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-1": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-1:044395824272:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-2": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-2:665172237481:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "ap-southeast-3": {
        "1x0x103xarm64": "arn:aws:lambda:ap-southeast-3:490737872127:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "ca-central-1": {
        "1x0x103xarm64": "arn:aws:lambda:ca-central-1:200266452380:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-central-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-central-1:187925254637:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-north-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-north-1:427196147048:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-south-1:325218067255:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "eu-west-1": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-1:015030872274:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-west-2": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-2:133256977650:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "eu-west-3": {
        "1x0x103xarm64": "arn:aws:lambda:eu-west-3:780235371811:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "me-south-1": {
        "1x0x103xarm64": "arn:aws:lambda:me-south-1:832021897121:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "sa-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:sa-east-1:933737806257:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "us-east-1": {
        "1x0x103xarm64": "arn:aws:lambda:us-east-1:177933569100:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "us-east-2": {
        "1x0x103xarm64": "arn:aws:lambda:us-east-2:590474943231:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
      "us-west-1": {
        "1x0x103xarm64": "arn:aws:lambda:us-west-1:997803712105:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:1",
      },
      "us-west-2": {
        "1x0x103xarm64": "arn:aws:lambda:us-west-2:345057560386:layer:AWS-Parameters-and-Secrets-Lambda-Extension-Arm64:4",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3": {
      "DependsOn": [
        "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDefaultPolicy5EC9C3E8",
        "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "7cd09150c04c60268a9d0553ddb6d1a78d7e4bc8b6b6f1ca6f4cdaca356bd9a7.zip",
        },
        "Description": "A function to run the scheduled RDS Database or Cluster.",
        "DurableConfig": {
          "ExecutionTimeout": 7200,
          "RetentionPeriodInDays": 1,
        },
        "Environment": {
          "Variables": {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "PARAMETERS_SECRETS_EXTENSION_CACHE_ENABLED": "true",
            "PARAMETERS_SECRETS_EXTENSION_CACHE_SIZE": "500",
            "PARAMETERS_SECRETS_EXTENSION_HTTP_PORT": "2773",
            "PARAMETERS_SECRETS_EXTENSION_LOG_LEVEL": "info",
            "PARAMETERS_SECRETS_EXTENSION_MAX_CONNECTIONS": "3",
            "SECRETS_MANAGER_TIMEOUT_MILLIS": "0",
            "SECRETS_MANAGER_TTL": "300",
            "SLACK_SECRET_NAME": "example/slack/webhook",
            "SSM_PARAMETER_STORE_TIMEOUT_MILLIS": "0",
            "SSM_PARAMETER_STORE_TTL": "300",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Fn::FindInMap": [
              "ParamsandsecretslayerMap",
              {
                "Ref": "AWS::Region",
              },
              "1x0x103xarm64",
            ],
          },
        ],
        "LoggingConfig": {
          "ApplicationLogLevel": "INFO",
          "LogFormat": "JSON",
          "LogGroup": {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionLogGroup1F20E46F",
          },
          "SystemLogLevel": "INFO",
        },
        "MemorySize": 512,
        "Role": {
          "Fn::GetAtt": [
            "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE": {
      "Properties": {
        "FunctionName": {
          "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3",
        },
        "FunctionVersion": {
          "Fn::GetAtt": [
            "RDSDatabaseRunningSchedulerRunningScheduleFunctionCurrentVersion1310F961a30996db3f0547eaaa13637c7ae184c6",
            "Version",
          ],
        },
        "Name": "live",
      },
      "Type": "AWS::Lambda::Alias",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionCurrentVersion1310F961a30996db3f0547eaaa13637c7ae184c6": {
      "Metadata": {
        "aws:cdk:do-not-refactor": true,
      },
      "Properties": {
        "FunctionName": {
          "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3",
        },
      },
      "Type": "AWS::Lambda::Version",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionEventInvokeConfig6F7C289F": {
      "Properties": {
        "FunctionName": {
          "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAE0B70F3",
        },
        "MaximumRetryAttempts": 2,
        "Qualifier": "$LATEST",
      },
      "Type": "AWS::Lambda::EventInvokeConfig",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionLogGroup1F20E46F": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "RetentionInDays": 90,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "A role to control the RDS Database or Cluster.",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicDurableExecutionRolePolicy",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDefaultPolicy5EC9C3E8": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "tag:GetResources",
              "Effect": "Allow",
              "Resource": "*",
              "Sid": "GetResources",
            },
            {
              "Action": [
                "rds:DescribeDBInstances",
                "rds:DescribeDBClusters",
                "rds:StartDBInstance",
                "rds:StartDBCluster",
                "rds:StopDBInstance",
                "rds:StopDBCluster",
              ],
              "Effect": "Allow",
              "Resource": "*",
              "Sid": "RdsRunningControl",
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:example/slack/webhook-??????",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDefaultPolicy5EC9C3E8",
        "Roles": [
          {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionRoleDF9E41FE",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RDSDatabaseRunningSchedulerRunningStartScheduleB533179F": {
      "Properties": {
        "Description": "running start schedule",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "ScheduleExpression": "cron(50 7 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "Etc/UTC",
        "State": "DISABLED",
        "Target": {
          "Arn": {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE",
          },
          "Input": "{"Params":{"TagKey":"WorkHoursRunning","TagValues":["YES"],"Mode":"Start"}}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 86400,
            "MaximumRetryAttempts": 185,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "SchedulerRoleForTarget52e03eB10A98F4",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "RDSDatabaseRunningSchedulerRunningStopScheduleC0B44E8E": {
      "Properties": {
        "Description": "running stop schedule",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "ScheduleExpression": "cron(5 19 ? * MON-FRI *)",
        "ScheduleExpressionTimezone": "Etc/UTC",
        "State": "DISABLED",
        "Target": {
          "Arn": {
            "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE",
          },
          "Input": "{"Params":{"TagKey":"WorkHoursRunning","TagValues":["YES"],"Mode":"Stop"}}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 86400,
            "MaximumRetryAttempts": 185,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "SchedulerRoleForTarget52e03eB10A98F4",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "SchedulerRoleForTarget52e03eB10A98F4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":scheduler:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":schedule-group/default",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "SchedulerRoleForTarget52e03eDefaultPolicyBA384A27": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": {
                "Ref": "RDSDatabaseRunningSchedulerRunningScheduleFunctionAliasliveE8928CBE",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SchedulerRoleForTarget52e03eDefaultPolicyBA384A27",
        "Roles": [
          {
            "Ref": "SchedulerRoleForTarget52e03eB10A98F4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
